# lidar_cam_bagging

./: .gitignore  README.md
src/data_processing/: CMakeLists.txt  package.xml
src/data_processing/launch/: lidar_cam_save.launch  sync_capture_econ_save.launch  sync_capture_vel_save.launch
src/data_processing/scripts/: no_sync_subscriber.py  subscriber.py  tf_publisher.py
src/data_processing/src/: capture_subscriber_econ_node.cpp  capture_subscriber_node.cpp  data_saver_node.cpp
